# vaultify

./: .clippy.toml  .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.4.0.md  a.md  rustfmt.toml  vault.md.gpg  vault.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
npm/: .npmignore  README.md  index.js  install.js  package.json
scripts/: setup-hooks.sh
src/: cli.rs  crypto.rs  error.rs  gpg.rs  interactive.rs  lib.rs  main.rs  models.rs  operations.rs  parser.rs  secure_temp.rs  security.rs  service.rs  toml_parser.rs  utils.rs
tests/: group_insertion_test.rs  integration_tests.rs  toml_integration.rs  validation_tests.rs
