[package]
name = "vaultify"
version = "0.2.5"
edition = "2021"
authors = ["vaultify contributors"]
description = "A secure, file-based secrets vault with interactive CLI"
license = "Apache-2.0"
repository = "https://github.com/Lucklyric/vaultify"
keywords = ["password", "vault", "security", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "vaultify"
path = "src/main.rs"

[dependencies]
# CLI and UI
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
colored = "2.1"
dialoguer = "0.11"
indicatif = "0.17"

# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Utilities
regex = "1.10"
chrono = "0.4"
copypasta = "0.10"
rpassword = "7.3"
tempfile = "3.10"
dirs = "5.0"
lazy_static = "1.4"
rustyline = "13.0"
libc = "0.2"
atty = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime (for clipboard timeout)
tokio = { version = "1.36", features = ["rt-multi-thread", "time", "macros"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
